# HierarchichalData

./: README.md  db.sqlite3  manage.py  pyproject.toml
sci_fi/: admin.py  apps.py  models.py  urls.py  views.py
sci_fi/migrations/: 0001_initial.py
sci_fi/templates/: index.html
sci_fi_mptt/: asgi.py  settings.py  urls.py  wsgi.py
