[tool.poetry]
name = "hierarchichaldata"
version = "0.1.0"
description = "A tree of sci-fi shows"
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
